tests/neg-custom-args/captures/widen-reach.check
-- Error: tests/neg-custom-args/captures/widen-reach.scala:13:26 -------------------------------------------------------
13 |  val y2: IO^ -> IO^ = y1.foo      // error
   |                       ^^^^^^
   |                       Local reach capability x* leaks into capture scope of method test.
   |                       To allow this, the parameter x should be declared with a @use annotation
-- Error: tests/neg-custom-args/captures/widen-reach.scala:14:30 -------------------------------------------------------
14 |  val y3: IO^ -> IO^{x*} = y1.foo  // error
   |                           ^^^^^^
   |                           Local reach capability x* leaks into capture scope of method test.
   |                           To allow this, the parameter x should be declared with a @use annotation
-- [E164] Declaration Error: tests/neg-custom-args/captures/widen-reach.scala:9:6 --------------------------------------
9 |  val foo: IO^ -> IO^ = x => x // error
  |      ^
  |      error overriding value foo in trait Foo of type IO^ -> box IO^;
  |        value foo of type IO^ -> (ex$3: caps.Exists) -> IO^{ex$3} has incompatible type
  |
  | longer explanation available when compiling with `-explain`
